# OpenKey

./: .gitignore  HEADER  LICENSE  Makefile.in  README.txt  asn1-x509.c  asn1-x509.h  autogen.sh  cackey.c  cackey.spec  cackey_builtin_certs.h  cackey_spm.c  cackey_spm.h  configure.ac  md5.c  md5.h  sha1.c  sha1.h  test.c
.fossil-settings/: ignore-glob
aclocal/: Makefile  dc_pcsc.m4  dc_pcscheaders.m4  dc_shobjs.m4  dc_versionscript.m4
leakcheck/: README.txt  leakcheck
pkcs11/: pkcs11n.h
